# libpxlr

./: .editorconfig  .firebaserc  .gitignore  .gitmodules  .prettierrc  Cargo.toml  build.bat  firebase.json  package.json  script-build.bat  script-start-emulators.bat  vetur.config.js
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: cd.yml  ci.yml
app/: .gitignore  .prettierrc  Cargo.toml  package-lock.json  package.json  postcss.config.js  snowpack.config.js  tsconfig.json
app/client/: editor.ts  index.tsx  worker.ts
app/client/containers/: App.scss  Layout.scss  Layout.tsx  View.scss  View.tsx  Viewport.scss  Viewport.tsx  Workbench.scss  Workbench.tsx
app/client/containers/views/: Outline.tsx  Properties.tsx  Viewport.tsx
app/client/contexts/: Editor.ts
app/editor/: editor.rs  lib.rs
app/public/: index.html
app/src/: App.css  App.tsx  index.tsx  service-worker.ts  serviceWorkerRegistration.ts  worker.ts
app/src/containers/: App.scss  App.styled.ts  App.tsx  Gridview.scss  Gridview.tsx  Layout.tsx  Pane.styled.ts  Pane.tsx  Splitview.scss  Splitview.styled.ts  Splitview.tsx  Workbench.tsx
app/src/helpers/: useAnimationFrame.ts
app/tests/: app.rs
app/types/: theme.d.ts
app2/: package-lock.json  package.json  snowpack.config.js  svelte.config.js  tailwind.config.js  tsconfig.json
app2/client/: App.svelte  App.test.ts  Layout.svelte  Workbench.svelte  index.ts
app2/client/helpers/: Layout.ts
app2/public/: index.html
backend/: package.json  tsconfig.dev.json
canvas/: Cargo.toml
canvas/src/: braille.rs  canvas.rs  lib.rs  sampling.rs  stencil.rs  transform.rs
cli/: Cargo.toml
cli/src/: clap.rs  main.rs
collections/: Cargo.toml
collections/src/: blocked_row_major.rs  braille.rs  byteschain.rs  lib.rs
collections/tests/: braille_fmt_test.rs
color/: Cargo.toml
color/src/: blending.rs  channel.rs  color.rs  lib.rs  pixel.rs
document/: Cargo.toml
document/src/: any.rs  canvas.rs  color.rs  document.rs  file.rs  group.rs  history.rs  label.rs  lib.rs  node.rs  note.rs  parser.rs  patch.rs  range.rs  stencil.rs  stencil2.rs
document/src/canvas/: blend.rs  canvas.rs  interpolation.rs  mod.rs  stencil.rs  transform.rs
document/src/command/: canvas.rs  mod.rs  node.rs  palette.rs  sprite.rs
document/src/file/: document.rs  file.rs  mod.rs  parser.rs  part.rs  reader.rs  sprite.rs  writer.rs
document/src/node/: canvas.rs  canvasgroup.rs  group.rs  mod.rs  note.rs  palette.rs  sprite.rs
document/src/parser/: mod.rs  v0.rs
document/src/patch/: add_child.rs  add_layer.rs  apply_stencil.rs  canvas.rs  crop.rs  crop_layer.rs  mod.rs  move_child.rs  move_layer.rs  node.rs  palette.rs  patch.rs  remove_child.rs  remove_layer.rs  rename.rs  resize_layer.rs  restore_layer_canvas.rs  restore_layer_group.rs  set_fold.rs  set_lock.rs  set_visibility.rs  sprite.rs
document/src/sprite/: blend.rs  canvas.rs  color.rs  group.rs  image.rs  image_i.rs  image_rgba.rs  image_uv.rs  interpolation.rs  layer.rs  layer_group.rs  mod.rs  pixel.rs  stencil.rs
document/src/sprite/patch/: add_layer.rs  apply_stencil.rs  mod.rs  move_layer.rs  remove_layer.rs  restore_canvas.rs  restore_group.rs
document/tests/: blend_test.rs  canvas_test.rs  document_test.rs  history_test.rs  layer_group.rs  serialize_test.rs  stencil_test.rs
document_cloudfile/: Cargo.toml
document_cloudfile/src/: backend.rs  lib.rs  parser.rs
document_command/: Cargo.toml
document_command/src/: group.rs  lib.rs  note.rs  palette.rs  rename.rs  translate.rs  unloaded.rs
document_core/: Cargo.toml
document_core/src/: canvas.rs  color.rs  find.rs  group.rs  lib.rs  note.rs  palette.rs  traits.rs  unloaded.rs  walk.rs
document_derive/: Cargo.toml
document_derive/src/: lib.rs
document_file/: Cargo.toml
document_file/src/: canvas.rs  colors.rs  group.rs  io.rs  lib.rs  meta.rs  node.rs  note.rs  palette.rs  parser.rs  traits.rs  vendors.rs
document_file/src/command/: group.rs  mod.rs  note.rs  palette.rs  rename.rs  translate.rs  unloaded.rs
document_file/src/document/: canvas.rs  core.rs  group.rs  mod.rs  note.rs  palette.rs  unloaded.rs
document_file/src/nodes/: canvas.rs  core.rs  group.rs  mod.rs  note.rs  palette.rs
document_file/src/primitives/: color.rs  mod.rs
document_serialize/: Cargo.toml
document_serialize/src/: lib.rs
editor/: Cargo.toml
editor/src/: blend.rs  canvas.rs  history.rs  interpolation.rs  lib.rs
editor/src/brush/: brush.rs  line.rs  mod.rs
editor/src/tool/: line.rs
editor/tests/: history_test.rs  line_test.rs
freeimage-sys/: Cargo.toml  build.rs  generate-bindings.sh  wrapper.h
freeimage-sys/src/: bindings.rs  lib.rs
libpxlr/: Cargo.toml  build.rs
libpxlr/src/: document.rs  editor.rs  lib.rs
libpxlr/src/native/: mod.rs
libpxlr/src/web/: file.rs  mod.rs
math/: Cargo.toml
math/src/: Vector2.rs  blend.rs  color.rs  interpolation.rs  lib.rs  matrix3.rs  matrix4.rs  rect.rs  vector2.rs  vector3.rs
parser/: Cargo.toml
parser/src/: file.rs  lib.rs  parser.rs  range.rs  range_bounds.rs  read_ranges.rs  request.rs
parser/src/document/: color.rs  document.rs  group.rs  mod.rs  node.rs  note.rs
parser/src/document/sprite/: canvas.rs  layer.rs  layer_group.rs  mod.rs
public/: index.html
webapp/: .npmrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
webapp/.storybook/: main.js  preview.css  preview.js
webapp/src/: App.css  App.module.css  App.tsx  App.vue
webapp/src/Anchor/: Anchor.stories.tsx  Anchor.tsx
webapp/src/Menu/: Menu.css  Menu.stories.tsx  Menu.tsx  MenuContainer.tsx  Menubar.css  Menubar.stories.tsx  Menubar.tsx  UnstyledMenu.tsx  hooks.tsx  index.tsx
webapp/src/components/: Blep.tsx  Checkbox.tsx  HelloWorld.vue  Input.tsx  Menu.stories.tsx  Menu.tsx  Menubar.stories.tsx  Menubar.tsx  ProtectedRoute.tsx  Toasts.tsx
webapp/src/contexts/: firebase.ts
webapp/src/hooks/: auth.ts  (+3 more)
webapp/types/: filesystemaccess.d.ts
webbackend/: .eslintrc.js  package-lock.json  package.json
webbackend/src/: index.ts
(+10 files in other folders)
