[package]
name = "app"
version = "0.1.0"
authors = ["Michael Grenier <michael@grenier.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "editor/lib.rs"

[profile.release]
lto = true

[features]
#default = ["wee_alloc"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.69"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.46"
features = ["console", "OffscreenCanvas", "WebGl2RenderingContext"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.19"
wasm-bindgen-futures = "0.4.19"
futures = "0.3.8"
js-sys = "0.3.46"
