[package]
name = "canvas"
version = "0.2.0"
edition = "2018"

[dependencies]
bitvec = { version = "0", features = ["serde"] }
color = { path = "../color" }
rstar = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["rc"] }
vek = { version = "0.15", features = ["serde"] }

[dev-dependencies]
image = { version = "0.23" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]