[package]
name = "cli"
version = "0.1.0"
authors = ["Michael Grenier <michael@grenier.dev>"]
edition = "2018"

[[bin]]
name = "pxlr"
path = "src/main.rs"

[features]
default = [ "imagerust" ]
imagerust = [ "image" ]
# imagenative = [ "freeimage-sys" ]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[dependencies]
clap = "2"
document = { path = "../document" }
editor = { path = "../editor" }
ron = "0"
serde_json = "1"

[dependencies.image]
optional = true
version = "0"

# [dependencies.freeimage-sys]
# optional = true
# path = "../freeimage-sys"