[package]
name = "collections"
version = "0.1.0"
authors = ["Michael Grenier <michael@grenier.dev>"]
edition = "2018"

[features]
default = []
arc = []

[dependencies]
bitvec = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["rc"] }

[dev-dependencies]
serde_json = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[lib]
name = "collections"
crate-type = ["rlib"]