[package]
name = "document"
version = "0.1.0"
authors = ["Michael Grenier <michael@grenier.dev>"]
edition = "2018"

[dependencies]
collections = { path = "../collections" }
math = { path = "../math" }
uuid = { version = "0.8", features = ["serde", "stdweb", "v4"] }
serde = { version = "1.0.106", features = ["rc"] }

[dev-dependencies]
image = "0.23.3"
serde_json = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[lib]
name = "document"
crate-type = ["rlib"]