[package]
name = "document"
version = "0.1.0"
authors = ["Michael Grenier <michael@grenier.dev>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
chrono = { version = "0.4", features = ["serde"] }
collections = { path = "../collections" }
document_derive = { path = "../document_derive" }
inventory = "0.1.7"
lazy_static = "1.4.0"
math = { path = "../math" }
serde = { version = "1.0.106", features = ["rc"] }
typetag = "0.1.5"
uuid = { version = "0.8", features = ["serde", "stdweb", "v4"] }

[dev-dependencies]
image = "0.23.3"
serde_json = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[lib]
name = "document"
crate-type = ["rlib"]