[package]
name = "document_command"
version = "0.2.0"
edition = "2018"

[dependencies]
color = { path = "../color" }
document_core = { path = "../document_core" }
uuid = { version = "0.8", features = ["stdweb", "v4"] }
vek = { version = "0.15" }

[build-dependencies]
rustc_version = "0.2.3"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }