[package]
name = "document_file"
version = "0.2.0"
edition = "2018"

[dependencies]
bitvec = { version = "0" }
bytes = "1.0"
canvas = { path = "../canvas" }
color = { path = "../color" }
document_core = { path = "../document_core" }
document_command = { path = "../document_command" }
nom = "6"
serde = { version = "1.0", features = ["rc"] }
uuid = { version = "0.8", features = ["serde", "stdweb", "v4"] }
vek = { version = "0.15", features = ["serde"] }

[dev-dependencies]
ron = "0.6.0"
serde_json = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]