[package]
name = "document_file"
version = "0.2.0"
edition = "2018"

[dependencies]
async-recursion = "0.3.2"
async-std = "1.9.0"
async-trait = "0.1.50"
bitvec = { version = "0.19.5" }
bytes = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
canvas = { path = "../canvas" }
color = { path = "../color" }
document_core = { path = "../document_core" }
document_command = { path = "../document_command" }
nom = "6"
uuid = { version = "0.8", features = ["stdweb", "v4"] }
vek = { version = "0.15" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]