[package]
name = "document_serialize"
version = "0.2.0"
edition = "2018"

[dependencies]
async-std = "1.9.0"
document_core = { path = "../document_core" }
document_command = { path = "../document_command" }
document_file = { path = "../document_file" }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }