[package]
name = "editor"
version = "0.1.0"
authors = ["Michael Grenier <michael@grenier.dev>"]
edition = "2018"

[dependencies]
document = { path = "../document" }
math = { path = "../math" }
uuid = { version = "0.8", features = ["serde", "v1", "v4"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[lib]
name = "editor"
crate-type = ["rlib"]