[package]
name = "freeimage-sys"
description = "Rust build helpers for freeimage. Licensed as GPL3, GPL2 or FreeImage License"
license-file = "FreeImage/license-fi.txt"
version = "3.18.0"
links = "freeimage"
build = "build.rs"
edition = "2018"

[lib]
name = "freeimage"
crate-type = ["rlib"]

[target.'cfg(windows)'.build-dependencies]
cc = "1"

[build-dependencies]
bindgen = "0.54.0"
fs_extra = "1"
regex = "1.3.9"