[package]
name = "libpxlr"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "libpxlr"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
default = ["wasm"]
wasm = []
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.74"
web-sys = { version = "0.3.51", features = ["console"] }
# wasm-bindgen = { path = "../../wasm-bindgen" }
# web-sys = { path = "../../wasm-bindgen/crates/web-sys", features = ["console"] }

# # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# # compared to the default allocator's ~10K. However, it is slower than the default
# # allocator, so it's not enabled by default.
# wee_alloc = { version = "0.4.2", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[build-dependencies]
cbindgen = "0.19.0"

# These crates are used for running unit tests.
[dev-dependencies]
futures = "0.3.15"
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
wasm-bindgen-test = "0.3.24"