[package]
name = "libpxlr"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "libpxlr"

[features]
default = ["wasm"]
wasm = []
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
async-std = "1.9.0"
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
web-sys = { version = "0.3.51", features = ["console", "File", "FileSystemHandle", "FileSystemHandlePermissionDescriptor", "PermissionState", "FileSystemPermissionMode", "FileSystemFileHandle", "TextDecoder", "Blob", "FileReader"] }

# # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# # compared to the default allocator's ~10K. However, it is slower than the default
# # allocator, so it's not enabled by default.
# wee_alloc = { version = "0.4.2", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[build-dependencies]
cbindgen = "0.19.0"

# These crates are used for running unit tests.
[dev-dependencies]
futures = "0.3.15"
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
wasm-bindgen-test = "0.3.24"