[package]
name = "libpxlr"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "libpxlr"

[features]


[dependencies]
async-std = "1.9.0"
document_core = { path = "../document_core" }
document_file = { path = "../document_file" }
js-sys = "0.3.51"
vek = { version = "0.15" }
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
web-sys = { version = "0.3.51", features = ["console", "File", "FileSystemHandle", "FileSystemHandlePermissionDescriptor", "PermissionState", "FileSystemPermissionMode", "FileSystemFileHandle", "TextDecoder", "Blob", "FileReader", "FileSystemWritableFileStream", "WriteCommandType", "WriteParams", "WritableStream", "FileSystemCreateWritableOptions"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[build-dependencies]
cbindgen = "0.19.0"

# These crates are used for running unit tests.
[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
futures = "0.3.15"
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
wasm-bindgen-test = "0.3.24"