[package]
name = "math"
version = "0.1.0"
authors = ["Michael Grenier <michael@grenier.dev>"]
edition = "2018"

[dependencies]
num-traits = "0.2.11"
vek = { version = "0.9.12", features = ["serde"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[lib]
name = "math"
crate-type = ["rlib"]