[package]
name = "parser"
version = "0.1.0"
authors = ["Michael Grenier <michael@grenier.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
bitflags = "1.2.1"
collections = { path = "../collections" }
document = { path = "../document" }
futures = "0.3.5"
math = { path = "../math" }
nom = "5"
uuid = { version = "0.8", features = ["serde", "stdweb", "v4"] }

[dev-dependencies]
async-std = "1.6.0"